--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="ASSETS/CSS/stylesheet.css">
     <title> counter app javascript</title>
   </head>
   <body>
@@ -15,6 +15,6 @@
       <button id="btn-decrease">DECREASE</button>
     </div>
   </div>
-    <script src="main.js"></script>
+    <script src="ASSETS/JS/main.js"></script>
       </body>
 </html>
