--- a/index.html
+++ b/index.html
@@ -3,18 +3,14 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="ASSETS/CSS/stylesheet.css">
+    <meta name="viewport" content="content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes">
     <title> counter app javascript</title>
   </head>
   <body>
     <div class="counter">
         <h1>Counter</h1>
         <h2 id="count-el">0</h2>
-    <div class="btn">
-      <button id="btn-increase">INCREASE</button>
-      <button id="btn-reset">RESET</button>
-      <button id="btn-decrease">DECREASE</button>
     </div>
-  </div>
     <script src="ASSETS/JS/main.js"></script>
       </body>
 </html>
